<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffffff"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="280dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtint1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/circle_shape_blue"
            android:gravity="center"
            android:text="@string/num1"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtint2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/circle_shape_blue"
            android:gravity="center"
            android:text="@string/num2"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtint3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/circle_shape_blue"
            android:gravity="center"
            android:text="@string/num3"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtint4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/circle_shape_blue"
            android:gravity="center"
            android:text="@string/num4"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtint5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/circle_shape_blue"
            android:gravity="center"
            android:text="@string/num5"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtnum1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/circle_shape_blue"
            android:gravity="center"
            android:text="@string/num1"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtnum2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/circle_shape_blue"
            android:gravity="center"
            android:text="@string/num2"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtnum3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/circle_shape_blue"
            android:gravity="center"
            android:text="@string/num3"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtnum4"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/circle_shape_blue"
            android:gravity="center"
            android:text="@string/num4"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtnum5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/circle_shape_blue"
            android:gravity="center"
            android:text="@string/num5"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/bsort"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="318dp"
        android:background="#448844"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/bubble_sort"
        android:textColor="#ffffff"
        android:textSize="18sp"
        tools:text="Realizar" />

    <TextView
        android:id="@+id/ssort"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="110dp"
        android:background="#448844"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/bubble_sort"
        android:textColor="#ffffff"
        android:textSize="18sp"
        tools:text="Realizar" />

    <TextView
        android:id="@+id/txtbblsort"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:layout_marginBottom="85dp"
        android:text="@string/bblsort"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="30sp"
        tools:ignore="UnknownId"
        tools:text="BubbleSort" />

    <TextView
        android:id="@+id/txtInsSort"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="219dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:text="@string/insSort"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="30sp"
        tools:text="Insertion Sort" />

    <Button
        android:id="@+id/graficas"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="114dp"
        android:layout_marginLeft="114dp"
        android:layout_marginEnd="114dp"
        android:layout_marginRight="114dp"
        android:layout_marginBottom="36dp"
        android:text="@string/grafica"
        tools:text="Ir a la gráfica" />

</RelativeLayout>